@@ -15,6 +15,8 @@ V1.9.6.0
 - fix: Shapefile, changed text decoding to get the correct names
 - fix: Internal browser, creating pocket series of queries
 - fix: Internal browser, deleting automatically created series of pocket queries
+- change: FormulaSolver: German help, new screenshot number functions
+- add: Search plugin, option to select geocaches that are or are not available in another gpp database
 
 V1.9.5.0
 
